# rules_foreign_cc

examples/: MODULE.bazel
examples/integration_tests/runtime_library_search_directories/: BUILD.bazel  README.md
examples/integration_tests/transitive_cc_foreign_matrix/: BUILD.bazel  README.md  app.c  consumer_tests.bzl  provider_semantic_parity_tests.bzl  runtime_test.sh
examples/integration_tests/transitive_cc_foreign_matrix/app/cc_binary_direct_deps/: BUILD.bazel
examples/integration_tests/transitive_cc_foreign_matrix/app/cmake_wrapped_cc_library/: BUILD.bazel
examples/integration_tests/transitive_cc_foreign_matrix/cc_binary_dynamic_deps/: BUILD.bazel
examples/integration_tests/transitive_cc_foreign_matrix/cc_binary_static_deps/: BUILD.bazel
examples/integration_tests/transitive_cc_foreign_matrix/cc_binary_wrapped_cc_library/: BUILD.bazel
examples/integration_tests/transitive_cc_foreign_matrix/cmake_direct_deps/: BUILD.bazel
examples/integration_tests/transitive_cc_foreign_matrix/cmake_dynamic_deps/: BUILD.bazel
examples/integration_tests/transitive_cc_foreign_matrix/cmake_static_deps/: BUILD.bazel
examples/integration_tests/transitive_cc_foreign_matrix/known_gap/: BUILD.bazel  README.md
examples/integration_tests/transitive_cc_foreign_matrix/provider/: BUILD.bazel
examples/integration_tests/transitive_matrix/: README.md  consumer_tests.bzl  linkage_test.sh  runtime_test.sh
examples/integration_tests/transitive_matrix/cc_direct/d001/: BUILD.bazel
examples/integration_tests/transitive_matrix/cc_direct/d002/: BUILD.bazel
examples/integration_tests/transitive_matrix/cc_direct/d003/: BUILD.bazel
examples/integration_tests/transitive_matrix/cc_direct/d004/: BUILD.bazel
examples/integration_tests/transitive_matrix/cc_dynamic/dyn001/: BUILD.bazel
examples/integration_tests/transitive_matrix/cc_dynamic/dyn002/: BUILD.bazel
examples/integration_tests/transitive_matrix/cc_dynamic/dyn003/: BUILD.bazel
examples/integration_tests/transitive_matrix/cc_dynamic/dyn004/: BUILD.bazel
examples/integration_tests/transitive_matrix/cc_wrap/w001/: BUILD.bazel
examples/integration_tests/transitive_matrix/cc_wrap/w002/: BUILD.bazel
examples/integration_tests/transitive_matrix/cc_wrap/w003/: BUILD.bazel
examples/integration_tests/transitive_matrix/cc_wrap/w004/: BUILD.bazel
examples/integration_tests/transitive_matrix/cmake_direct/d001/: BUILD.bazel
examples/integration_tests/transitive_matrix/cmake_direct/d002/: BUILD.bazel
examples/integration_tests/transitive_matrix/cmake_direct/d003/: BUILD.bazel
examples/integration_tests/transitive_matrix/cmake_direct/d004/: BUILD.bazel
examples/integration_tests/transitive_matrix/cmake_dynamic/dyn001/: BUILD.bazel
examples/integration_tests/transitive_matrix/cmake_dynamic/dyn002/: BUILD.bazel
examples/integration_tests/transitive_matrix/cmake_dynamic/dyn003/: BUILD.bazel
examples/integration_tests/transitive_matrix/cmake_dynamic/dyn004/: BUILD.bazel
examples/integration_tests/transitive_matrix/cmake_wrap/w001/: BUILD.bazel
examples/integration_tests/transitive_matrix/cmake_wrap/w002/: BUILD.bazel
examples/integration_tests/transitive_matrix/cmake_wrap/w003/: BUILD.bazel
examples/integration_tests/transitive_matrix/cmake_wrap/w004/: BUILD.bazel
examples/integration_tests/transitive_matrix/known_gap/: BUILD.bazel
examples/integration_tests/transitive_matrix/provider_parity/: BUILD.bazel
foreign_cc/: BUILD.bazel  cmake.bzl  configure.bzl  make.bzl  meson.bzl  msbuild.bzl  ninja.bzl
foreign_cc/private/: BUILD.bazel  cc_toolchain_util.bzl  configure_script.bzl  framework.bzl  make_env_vars.bzl  run_shell_file_utils.bzl  runtime_library_search_directories.bzl
foreign_cc/settings/: BUILD.bazel
test/: runtime_library_search_directories_test.bzl
toolchains/: built_toolchains.bzl
