load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")
load("//foreign_cc/private:resource_sets.bzl", _create_settings = "create_settings")

_create_settings()

bool_flag(
    name = "allow_building_in_tmp",
    build_setting_default = False,
    visibility = ["//visibility:public"],
)

bool_flag(
    name = "runtime_library_search_directories",
    build_setting_default = False,
    visibility = ["//visibility:public"],
)
