load(
    "//integration_tests/transitive_cc_foreign_matrix:consumer_tests.bzl",
    "cc_binary_consumer_test",
    "expected_loaded_libraries",
)

cc_binary_consumer_test(
    name = "libarchive_static_zlib_static_linkstatic_true",
    expected_loaded_libraries = expected_loaded_libraries(),
    linkstatic = True,
    deps = ["@examples_libarchive//:libarchive_static_zlib_static"],
)

cc_binary_consumer_test(
    name = "libarchive_static_zlib_static_linkstatic_false",
    expected_loaded_libraries = expected_loaded_libraries(),
    linkstatic = False,
    deps = ["@examples_libarchive//:libarchive_static_zlib_static"],
)

cc_binary_consumer_test(
    name = "libarchive_static_zlib_foreign_static_linkstatic_true",
    expected_loaded_libraries = expected_loaded_libraries(),
    linkstatic = True,
    deps = ["@examples_libarchive//:libarchive_static_zlib_foreign_static"],
)

cc_binary_consumer_test(
    name = "libarchive_static_zlib_foreign_static_linkstatic_false",
    expected_loaded_libraries = expected_loaded_libraries(),
    linkstatic = False,
    deps = ["@examples_libarchive//:libarchive_static_zlib_foreign_static"],
)

cc_binary_consumer_test(
    name = "libarchive_static_zlib_dynamic_linkstatic_true",
    expected_loaded_libraries = expected_loaded_libraries(
        zlib = "@examples_zlib//:zlib_shared",
    ),
    linkstatic = True,
    deps = ["@examples_libarchive//:libarchive_static_zlib_dynamic"],
)

cc_binary_consumer_test(
    name = "libarchive_static_zlib_dynamic_linkstatic_false",
    expected_loaded_libraries = expected_loaded_libraries(
        zlib = "@examples_zlib//:zlib_shared",
    ),
    linkstatic = False,
    deps = ["@examples_libarchive//:libarchive_static_zlib_dynamic"],
)

cc_binary_consumer_test(
    name = "libarchive_static_zlib_foreign_shared_linkstatic_true",
    expected_loaded_libraries = expected_loaded_libraries(
        zlib = "@examples_zlib//:zlib_foreign_shared",
    ),
    linkstatic = True,
    deps = ["@examples_libarchive//:libarchive_static_zlib_foreign_shared"],
)

cc_binary_consumer_test(
    name = "libarchive_static_zlib_foreign_shared_linkstatic_false",
    expected_loaded_libraries = expected_loaded_libraries(
        zlib = "@examples_zlib//:zlib_foreign_shared",
    ),
    linkstatic = False,
    deps = ["@examples_libarchive//:libarchive_static_zlib_foreign_shared"],
)

cc_binary_consumer_test(
    name = "libarchive_foreign_static_zlib_static_linkstatic_true",
    expected_loaded_libraries = expected_loaded_libraries(),
    linkstatic = True,
    deps = ["@examples_libarchive//:libarchive_foreign_static_zlib_static"],
)

cc_binary_consumer_test(
    name = "libarchive_foreign_static_zlib_static_linkstatic_false",
    expected_loaded_libraries = expected_loaded_libraries(),
    linkstatic = False,
    deps = ["@examples_libarchive//:libarchive_foreign_static_zlib_static"],
)

cc_binary_consumer_test(
    name = "libarchive_foreign_static_zlib_foreign_static_linkstatic_true",
    expected_loaded_libraries = expected_loaded_libraries(),
    linkstatic = True,
    deps = ["@examples_libarchive//:libarchive_foreign_static_zlib_foreign_static"],
)

cc_binary_consumer_test(
    name = "libarchive_foreign_static_zlib_foreign_static_linkstatic_false",
    expected_loaded_libraries = expected_loaded_libraries(),
    linkstatic = False,
    deps = ["@examples_libarchive//:libarchive_foreign_static_zlib_foreign_static"],
)

cc_binary_consumer_test(
    name = "libarchive_foreign_static_zlib_dynamic_linkstatic_true",
    expected_loaded_libraries = expected_loaded_libraries(
        zlib = "@examples_zlib//:zlib_shared",
    ),
    linkstatic = True,
    deps = ["@examples_libarchive//:libarchive_foreign_static_zlib_dynamic"],
)

cc_binary_consumer_test(
    name = "libarchive_foreign_static_zlib_dynamic_linkstatic_false",
    expected_loaded_libraries = expected_loaded_libraries(
        zlib = "@examples_zlib//:zlib_shared",
    ),
    linkstatic = False,
    deps = ["@examples_libarchive//:libarchive_foreign_static_zlib_dynamic"],
)

cc_binary_consumer_test(
    name = "libarchive_foreign_static_zlib_foreign_shared_linkstatic_true",
    expected_loaded_libraries = expected_loaded_libraries(
        zlib = "@examples_zlib//:zlib_foreign_shared",
    ),
    linkstatic = True,
    deps = ["@examples_libarchive//:libarchive_foreign_static_zlib_foreign_shared"],
)

cc_binary_consumer_test(
    name = "libarchive_foreign_static_zlib_foreign_shared_linkstatic_false",
    expected_loaded_libraries = expected_loaded_libraries(
        zlib = "@examples_zlib//:zlib_foreign_shared",
    ),
    linkstatic = False,
    deps = ["@examples_libarchive//:libarchive_foreign_static_zlib_foreign_shared"],
)

test_suite(
    name = "tests",
    tests = [
        ":libarchive_foreign_static_zlib_dynamic_linkstatic_false_test",
        ":libarchive_foreign_static_zlib_dynamic_linkstatic_true_test",
        ":libarchive_foreign_static_zlib_foreign_shared_linkstatic_false_test",
        ":libarchive_foreign_static_zlib_foreign_shared_linkstatic_true_test",
        ":libarchive_foreign_static_zlib_foreign_static_linkstatic_false_test",
        ":libarchive_foreign_static_zlib_foreign_static_linkstatic_true_test",
        ":libarchive_foreign_static_zlib_static_linkstatic_false_test",
        ":libarchive_foreign_static_zlib_static_linkstatic_true_test",
        ":libarchive_static_zlib_dynamic_linkstatic_false_test",
        ":libarchive_static_zlib_dynamic_linkstatic_true_test",
        ":libarchive_static_zlib_foreign_shared_linkstatic_false_test",
        ":libarchive_static_zlib_foreign_shared_linkstatic_true_test",
        ":libarchive_static_zlib_foreign_static_linkstatic_false_test",
        ":libarchive_static_zlib_foreign_static_linkstatic_true_test",
        ":libarchive_static_zlib_static_linkstatic_false_test",
        ":libarchive_static_zlib_static_linkstatic_true_test",
    ],
    visibility = ["//integration_tests/transitive_cc_foreign_matrix:__pkg__"],
)
