load(
    "//integration_tests/transitive_cc_foreign_matrix:consumer_tests.bzl",
    "cmake_cache_entries",
    "cmake_consumer_test",
    "expected_loaded_libraries",
)

cmake_consumer_test(
    name = "libarchive_shared_zlib_static",
    cache_entries = cmake_cache_entries(
        libarchive = "archive_zlib_static",
        libarchive_windows = "archive_zlib_static.if",
    ),
    dynamic_deps = ["@examples_libarchive//:libarchive_shared_zlib_static"],
    expected_loaded_libraries = expected_loaded_libraries(
        libarchive = "@examples_libarchive//:libarchive_shared_zlib_static",
    ),
    deps = ["@examples_libarchive//:libarchive_headers"],
)

cmake_consumer_test(
    name = "libarchive_shared_zlib_foreign_static",
    cache_entries = cmake_cache_entries(
        libarchive = "archive_zlib_foreign_static",
        libarchive_windows = "archive_zlib_foreign_static.if",
    ),
    dynamic_deps = ["@examples_libarchive//:libarchive_shared_zlib_foreign_static"],
    expected_loaded_libraries = expected_loaded_libraries(
        libarchive = "@examples_libarchive//:libarchive_shared_zlib_foreign_static",
    ),
    deps = ["@examples_libarchive//:libarchive_headers"],
)

cmake_consumer_test(
    name = "libarchive_shared_zlib_dynamic",
    cache_entries = cmake_cache_entries(
        libarchive = "archive_zlib_dynamic",
        libarchive_windows = "archive_zlib_dynamic.if",
    ),
    dynamic_deps = ["@examples_libarchive//:libarchive_shared_zlib_dynamic"],
    expected_loaded_libraries = expected_loaded_libraries(
        libarchive = "@examples_libarchive//:libarchive_shared_zlib_dynamic",
        zlib = "@examples_zlib//:zlib_shared",
    ),
    deps = ["@examples_libarchive//:libarchive_headers"],
)

cmake_consumer_test(
    name = "libarchive_shared_zlib_foreign_shared",
    cache_entries = cmake_cache_entries(
        libarchive = "archive_zlib_foreign_shared",
        libarchive_windows = "archive_zlib_foreign_shared.if",
    ),
    dynamic_deps = ["@examples_libarchive//:libarchive_shared_zlib_foreign_shared"],
    expected_loaded_libraries = expected_loaded_libraries(
        libarchive = "@examples_libarchive//:libarchive_shared_zlib_foreign_shared",
        zlib = "@examples_zlib//:zlib_foreign_shared",
    ),
    deps = ["@examples_libarchive//:libarchive_headers"],
)

test_suite(
    name = "tests",
    tests = [
        ":libarchive_shared_zlib_dynamic_test",
        ":libarchive_shared_zlib_foreign_shared_test",
        ":libarchive_shared_zlib_foreign_static_test",
        ":libarchive_shared_zlib_static_test",
    ],
    visibility = ["//integration_tests/transitive_cc_foreign_matrix:__pkg__"],
)
