load("@rules_cc//cc:defs.bzl", "cc_library")
load(
    "//integration_tests/transitive_cc_foreign_matrix:consumer_tests.bzl",
    "cmake_cache_entries",
    "cmake_consumer_test",
    "expected_loaded_libraries",
)

cc_library(
    name = "libarchive_foreign_shared_zlib_static_wrapper",
    deps = ["@examples_libarchive//:libarchive_foreign_shared_zlib_static"],
)

cc_library(
    name = "libarchive_foreign_shared_zlib_foreign_static_wrapper",
    deps = ["@examples_libarchive//:libarchive_foreign_shared_zlib_foreign_static"],
)

cc_library(
    name = "libarchive_foreign_shared_zlib_dynamic_wrapper",
    deps = ["@examples_libarchive//:libarchive_foreign_shared_zlib_dynamic"],
)

cc_library(
    name = "libarchive_foreign_shared_zlib_foreign_shared_wrapper",
    deps = ["@examples_libarchive//:libarchive_foreign_shared_zlib_foreign_shared"],
)

cmake_consumer_test(
    name = "libarchive_foreign_shared_zlib_static",
    cache_entries = cmake_cache_entries(libarchive = "archive"),
    expected_loaded_libraries = expected_loaded_libraries(
        libarchive = "@examples_libarchive//:libarchive_foreign_shared_zlib_static",
    ),
    deps = [":libarchive_foreign_shared_zlib_static_wrapper"],
)

cmake_consumer_test(
    name = "libarchive_foreign_shared_zlib_foreign_static",
    cache_entries = cmake_cache_entries(libarchive = "archive"),
    expected_loaded_libraries = expected_loaded_libraries(
        libarchive = "@examples_libarchive//:libarchive_foreign_shared_zlib_foreign_static",
    ),
    deps = [":libarchive_foreign_shared_zlib_foreign_static_wrapper"],
)

cmake_consumer_test(
    name = "libarchive_foreign_shared_zlib_dynamic",
    cache_entries = cmake_cache_entries(libarchive = "archive"),
    expected_loaded_libraries = expected_loaded_libraries(
        libarchive = "@examples_libarchive//:libarchive_foreign_shared_zlib_dynamic",
        zlib = "@examples_zlib//:zlib_shared",
    ),
    deps = [":libarchive_foreign_shared_zlib_dynamic_wrapper"],
)

cmake_consumer_test(
    name = "libarchive_foreign_shared_zlib_foreign_shared",
    cache_entries = cmake_cache_entries(libarchive = "archive"),
    expected_loaded_libraries = expected_loaded_libraries(
        libarchive = "@examples_libarchive//:libarchive_foreign_shared_zlib_foreign_shared",
        zlib = "@examples_zlib//:zlib_foreign_shared",
    ),
    deps = [":libarchive_foreign_shared_zlib_foreign_shared_wrapper"],
)

cmake_consumer_test(
    name = "libarchive_dynamic_zlib_static",
    cache_entries = cmake_cache_entries(
        libarchive = "archive_zlib_static",
        libarchive_windows = "archive_zlib_static.if",
    ),
    expected_loaded_libraries = expected_loaded_libraries(
        libarchive = "@examples_libarchive//:libarchive_shared_zlib_static",
    ),
    deps = ["@examples_libarchive//:libarchive_dynamic_zlib_static"],
)

cmake_consumer_test(
    name = "libarchive_dynamic_zlib_foreign_static",
    cache_entries = cmake_cache_entries(
        libarchive = "archive_zlib_foreign_static",
        libarchive_windows = "archive_zlib_foreign_static.if",
    ),
    expected_loaded_libraries = expected_loaded_libraries(
        libarchive = "@examples_libarchive//:libarchive_shared_zlib_foreign_static",
    ),
    deps = ["@examples_libarchive//:libarchive_dynamic_zlib_foreign_static"],
)

cmake_consumer_test(
    name = "libarchive_dynamic_zlib_dynamic",
    cache_entries = cmake_cache_entries(
        libarchive = "archive_zlib_dynamic",
        libarchive_windows = "archive_zlib_dynamic.if",
    ),
    expected_loaded_libraries = expected_loaded_libraries(
        libarchive = "@examples_libarchive//:libarchive_shared_zlib_dynamic",
        zlib = "@examples_zlib//:zlib_shared",
    ),
    deps = ["@examples_libarchive//:libarchive_dynamic_zlib_dynamic"],
)

cmake_consumer_test(
    name = "libarchive_dynamic_zlib_foreign_shared",
    cache_entries = cmake_cache_entries(
        libarchive = "archive_zlib_foreign_shared",
        libarchive_windows = "archive_zlib_foreign_shared.if",
    ),
    expected_loaded_libraries = expected_loaded_libraries(
        libarchive = "@examples_libarchive//:libarchive_shared_zlib_foreign_shared",
        zlib = "@examples_zlib//:zlib_foreign_shared",
    ),
    deps = ["@examples_libarchive//:libarchive_dynamic_zlib_foreign_shared"],
)

test_suite(
    name = "tests",
    tests = [
        ":libarchive_dynamic_zlib_dynamic_test",
        ":libarchive_dynamic_zlib_foreign_shared_test",
        ":libarchive_dynamic_zlib_foreign_static_test",
        ":libarchive_dynamic_zlib_static_test",
        ":libarchive_foreign_shared_zlib_dynamic_test",
        ":libarchive_foreign_shared_zlib_foreign_shared_test",
        ":libarchive_foreign_shared_zlib_foreign_static_test",
        ":libarchive_foreign_shared_zlib_static_test",
    ],
    visibility = ["//integration_tests/transitive_cc_foreign_matrix:__pkg__"],
)
